erDiagram
    User {
        integer UserID PK
        varchar Firstname
        varchar LastName "nullable"
        varchar Email UK "nullable"
        varchar Phone UK "nullable"
        varchar PasswordHash
        varchar City
        enum Role "Customer, Admin"
        enum Status "active, disactive"
        timestamp RegistrationDate
        integer Ceredit
        varchar UserPicUrl "nullable"
    }

    TicketInfo {
        integer ID PK
        integer SeatCategoryID FK
        integer MatchID FK
        integer Price
        integer RemainingCapacity
        timestamp SaleStartDate "nullable"
        timestamp SaleEndDate "nullable"
    }

    TicketAmenity {
        integer TicketAmenityID PK
        varchar AmenityName
        varchar Description "nullable"
    }

    TicketInfo_TicketAmenity {
        integer TicketInfoID PK,FK
        integer TicketAmenityID PK,FK
    }

    Ticket {
        integer ID PK
        integer TicketInfoID FK
        integer VenueSeatID FK
        integer VenueID FK
    }

    SeatCategory {
        integer ID PK
        varchar Name
    }

    Reservation {
        integer ID PK
        integer UserID FK
        enum Status "Pending,Reserved,Cancelled,Expired"
        timestamp ReservationTime
        timestamp ExpirationTime
        integer CancelledByUserID FK "nullable"
        timestamp CancelledAt "nullable"
    }

    Reservation_Ticket {
        integer ReservationID PK,FK
        integer TicketID PK,FK
    }

    Payment {
        integer PeymentID PK
        integer UserID FK
        integer ReservationID FK
        integer Amount
        enum PeymentMethod
        enum Status "Pending,Success,Failed,Refunded"
        timestamp PeymentTime "nullable"
    }

    Match {
        integer MatchID PK
        integer HomeTeamID FK
        integer AwayTeamID FK
        integer VenueID FK
        integer OrganizerID FK
        integer SportTypeID FK
        integer LeagueID FK
        timestamp MatchDataTime
        varchar Title
    }
    Venue {
        integer VenueID PK
        varchar Name
        varchar Province
        varchar City
        varchar Address
        integer Capacity
    }
    Organizer {
        integer OrganizerID PK
        varchar Name
        varchar ContactInfo
        JSON CancelationPolicy
    }
    Team {
        integer TeamID PK
        varchar Name
        varchar LogoURL "nullable"
    }
    SportType {
        integer ID PK
        varchar Name
    }
    League {
        integer ID PK
        varchar Name
    }
    VenueSeat {
        integer ID PK
        integer VenueID PK,FK
        varchar Section
        integer RowNumber
        integer SeatNumber
        varchar TicketClass
    }
    Report {
        integer ID PK
        integer UserID FK
        integer ReportCategoryID FK
        integer ReservationID FK "nullable"
        integer TicketID FK "nullable"
        varchar Description "nullable"
        integer AdminID FK
        varchar AdminResponse
        enum Status
    }
    ReportCategory {
        integer ID PK
        varchar Name
    }

    %% Relationships
    TicketInfo }o--|| Match : "belongs to"
    TicketInfo }o--|| SeatCategory : "categorized by"
    TicketInfo ||--o{ Ticket : "has"
    TicketInfo ||--o{ TicketInfo_TicketAmenity : "has amenities"
    TicketAmenity ||--o{ TicketInfo_TicketAmenity : "used by"

    Ticket }o--|| VenueSeat : "assigned to"
    Ticket ||--o{ Reservation_Ticket : "part of"

    Reservation ||--o{ Reservation_Ticket : "contains"
    Reservation }o--|| User : "cancel by"
    Reservation ||--|| Payment : "has payment"

    VenueSeat }o--|| Venue : "located in"

    Match }o--|| Venue : "held at"
    Match }o--|| Organizer : "organized by"
    Match }o--|| Team : "home team"
    Match }o--|| Team : "away team"
    Match }o--|| SportType : "type of sport"
    Match }o--|| League : "belongs to league"

    Report }o--|| User : "submitted by"
    Report }o--|| User : "Answer by"
    Report }o--|| ReportCategory : "categorized as"
    Report }o--o| Reservation : "reported in (nullable)"
    Report }o--o| Ticket : "reported in (nullable)"

    User ||--o{ Reservation : "places"
    User ||--o{ Payment : "makes"
